--- a/index.html
+++ b/index.html
@@ -1,1 +1,216 @@
-Halo Dunia!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTML Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+  </head>
+
+  <body class="bg-gradient-to-r from-slate-600 to-slate-800">
+    <!-- Navbar start -->
+    <div class="flex justify-between align-center px-7 py-3">
+      <div>
+        <button>
+          <h1
+            class="hover:text-slate-300 duration-150 ease-in-out text-xl font-semibold"
+          >
+            My Portfolio
+          </h1>
+        </button>
+      </div>
+      <div>
+        <ul class="flex gap-7">
+          <li
+            class="hover:text-blue-300 ease-in-out duration-150 underline underline-offset-[4px] text-blue-300"
+          >
+            <a href="index.html">Home</a>
+          </li>
+          <li class="hover:text-blue-300 ease-in-out duration-150">
+            <a href="about.html">About</a>
+          </li>
+          <li class="hover:text-blue-300 ease-in-out duration-150">
+            <a href="contactMe.html">Contact Me</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- Navbar end -->
+
+    <!-- Main start -->
+    <div class="flex justify-center mt-20">
+      <div class="flex-col">
+        <!-- Profile -->
+        <img
+          src="profile.jpg"
+          alt="profile photo"
+          width="230px"
+          height="230px"
+          class="rounded-full hover:scale-105 duration-150 ease-in-out m-auto main-photo"
+        />
+        <h2 class="mt-3 text-xl text-center name">
+          Steven Oscar Dharmasetiana
+        </h2>
+        <h4 class="text-slate-400 text-center profile-description">
+          Student | Computer Science
+        </h4>
+
+        <div class="bg-slate mt-14 mb-[180px] personal-information">
+          <p class="text-center text-sm md:text-base">
+            <span class="material-symbols-outlined text-sm mr-2 translate-y-px"
+              >home</span
+            >Jalan Tambak Mas XVII RT.01/RW.04, Kel. Panggung Lor, Kec. Semarang
+            Utara
+          </p>
+          <p class="text-center text-sm md:text-base">
+            <span class="material-symbols-outlined text-sm mr-2 translate-y-px"
+              >call</span
+            >085108807338
+          </p>
+          <p class="text-center text-sm md:text-base">
+            <span class="material-symbols-outlined text-sm mr-2 translate-y-px"
+              >school</span
+            >SMA Kristen Terang Bangsa
+          </p>
+          <p class="text-center mt-2 text-sm md:text-base">
+            <span class="material-symbols-outlined text-sm mr-2 translate-y-px"
+              >child_care</span
+            >Semarang, 22 Agustus 2004
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Profile end -->
+
+    <!-- My photos section -->
+      <div class="flex gap-7 justify-center my-16 m-auto flex-wrap albums-section">
+        <img
+          src="profile.jpg"
+          alt="profile photo"
+          width="230px"
+          height="230px"
+          class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-1"
+        />
+        <img
+          src="profile.jpg"
+          alt="profile photo"
+          width="230px"
+          height="230px"
+          class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-2"
+        />
+        <img
+          src="profile.jpg"
+          alt="profile photo"
+          width="230px"
+          height="230px"
+          class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-3"
+        />
+        <img
+          src="profile.jpg"
+          alt="profile photo"
+          width="230px"
+          height="230px"
+          class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-4"
+        />
+        <img
+          src="profile.jpg"
+          alt="profile photo"
+          width="230px"
+          height="230px"
+          class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-5"
+        />
+        <img
+          src="profile.jpg"
+          alt="profile photo"
+          width="230px"
+          height="230px"
+          class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-6"
+        />
+    </div>
+    <!-- My photos section end -->
+
+    <!-- Main end -->
+    <script>
+      // Karna saya kurang mengerti penggunaan cara untuk pengambilan setiap index pada album atau foto menggunakan DOM manipulate nya vanilla JavaScript, maka saya akalin dengan seperti ini saja hehe :)
+      const image1 = document.querySelector(".image-photo-1");
+      const image2 = document.querySelector(".image-photo-2");
+      const image3 = document.querySelector(".image-photo-3");
+      const image4 = document.querySelector(".image-photo-4");
+      const image5 = document.querySelector(".image-photo-5");
+      const image6 = document.querySelector(".image-photo-6");
+
+      const mainPhoto = document.querySelector(".main-photo");
+      const profileDescription = document.querySelector(".profile-description");
+      const profileName = document.querySelector(".name");
+      const personalInformation = document.querySelector(
+        ".personal-information"
+      );
+
+      // Mendapatkan jumlah pixel yang sudah dilewatin
+      function getScrollOffset() {
+        return window.pageYOffset || document.documentElement.scrollTop;
+      }
+
+      // Menampilkan album saat setelah scrolling melewati sebanyak 310px
+      function showImageOnScroll() {
+        const scrollOffset = getScrollOffset();
+
+        if (scrollOffset >= 310) {
+          image1.classList.add("visible");
+        }
+        if (scrollOffset >= 310) {
+          image2.classList.add("visible");
+        }
+        if (scrollOffset >= 310) {
+          image3.classList.add("visible");
+        }
+        if (scrollOffset >= 310) {
+          image4.classList.add("visible");
+        }
+        if (scrollOffset >= 310) {
+          image5.classList.add("visible");
+        }
+        if (scrollOffset >= 310) {
+          image6.classList.add("visible");
+        }
+        // Menampilkan gambar animasi setelah halaman selesai dimuat
+        if (scrollOffset >= 0) {
+          profileName.classList.add("visible");
+        }
+        if (scrollOffset >= 0) {
+          mainPhoto.classList.add("visible");
+        }
+        if (scrollOffset >= 0) {
+          profileDescription.classList.add("visible");
+        }
+        if (scrollOffset >= 0) {
+          personalInformation.classList.add("visible");
+        }
+      }
+
+      // Menampilkan album setelah loading page jika user sudah cukup melakukan scroll
+      window.addEventListener("load", showImageOnScroll);
+
+      // Menampilkan album saat user scrolling
+      window.addEventListener("scroll", showImageOnScroll);
+    </script>
+  </body>
+</html>
