modifying index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- Profile end -->
 
     <!-- My photos section -->
-      <div class="flex gap-7 justify-center my-16 m-auto flex-wrap albums-section">
+      <div class="flex gap-7 justify-center my-16 max-w-4xl m-auto flex-wrap albums-section">
         <img
           src="profile.jpg"
           alt="profile photo"
