--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <h1 class="text-2xl aboutMe-font text-center">About Me</h1>
       </div>
       <div class="max-w-5xl m-auto px-5">
-        <p class="aboutMe-paragraph">
+        <p class="aboutMe-paragraph text-sm md:text-base">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tempora
           quo impedit sint voluptates. Neque dicta dolorum in voluptate!
           Laudantium itaque quas perferendis, quam totam tenetur eos dolor
