--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <div class="flex-col">
         <!-- Profile -->
         <img
-          src="profile.jpg"
+          src="/assets/profile.jpeg"
           alt="profile photo"
-          width="230px"
-          height="230px"
+          width="250px"
+          height="250px"
           class="rounded-full hover:scale-105 duration-150 ease-in-out m-auto main-photo"
         />
         <h2 class="mt-3 text-xl text-center name">
@@ -103,43 +103,43 @@
     <!-- My photos section -->
       <div class="flex gap-7 justify-center my-16 max-w-4xl m-auto flex-wrap albums-section">
         <img
-          src="profile.jpg"
-          alt="profile photo"
-          width="230px"
-          height="230px"
-          class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-1"
+          src="assets/gank.jpeg"
+          alt="album photos"
+          width="100%"
+          height="100%"
+          class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-1 w-[40%] h-[40%] basis-full max-w-[84%]"
         />
         <img
-          src="profile.jpg"
-          alt="profile photo"
+          src="assets/me.jpeg"
+          alt="album photos"
           width="230px"
           height="230px"
           class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-2"
         />
         <img
-          src="profile.jpg"
-          alt="profile photo"
+          src="assets/merbabu-park.jpeg"
+          alt="album photos"
           width="230px"
           height="230px"
           class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-3"
         />
         <img
-          src="profile.jpg"
-          alt="profile photo"
+          src="assets/pc.jpeg"
+          alt="album photos"
           width="230px"
           height="230px"
           class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-4"
         />
         <img
-          src="profile.jpg"
-          alt="profile photo"
+          src="assets/red-purple-sky.jpeg"
+          alt="album photos"
           width="230px"
           height="230px"
           class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-5"
         />
         <img
-          src="profile.jpg"
-          alt="profile photo"
+          src="assets/yellow-sky.jpeg"
+          alt="album photos"
           width="230px"
           height="230px"
           class="rounded-lg hover:scale-105 duration-300 hover:delay-0 hover:duration-150 ease-in-out image-photo-6"
